# iot-event-analytics

./: .dockerignore  .eslintrc  .gitignore  .markdownlintrc  .npmignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  get-sdks.js  jsdoc.json  package.json  postinstall.js  requirements.dapr.txt  requirements.dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/integration-tests/: startIntegrationTests.sh  startPlatform.sh
.github/actions/pr-check-signoff/: README.md  action.yml  index.js  package.json
.github/scripts/: yarn-audit.sh
.github/workflows/: README.md  build_and_test_cpp_sdk.yml  docker_images.yml  run_integration_test.yml  test_js_sdk.yml  test_python_sdk.yml  testevent-build-image.json  validate-pr.yml  validate_pr.yml
LICENSES/: IOTEA_DISCLAIMER_NODEJS.txt
docker/: README.md
docker-compose/: .env  .env-proxy  .env-test  .env-test-proxy  README.md  docker-compose.integration_tests_cpp.yml  docker-compose.integration_tests_js.yml  docker-compose.integration_tests_py.yml  docker-compose.integration_tests_runner.yml  docker-compose.integration_tests_runner_sdk_tests.yml  docker-compose.mosquitto.yml  docker-compose.platform-slim.yml  docker-compose.platform.debug.yml  docker-compose.platform.yml
docker-compose/mosquitto/: config.json
docker-compose/platform/: config.json  types.json  uom.json
docker/config/: Dockerfile.amd64  Dockerfile.arm64  README.md  dapr_pubsub.yaml  index.js
docker/config/config/: config.json
docker/integration-tests/: Dockerfile.amd64
docker/integration-tests/python-test-suite/: requirements.txt
docker/kuksa.val2iotea/: Dockerfile.amd64  Dockerfile.arm64  README.md  index.js
docker/kuksa.val2iotea/config/: config.json
docker/mosquitto/: Dockerfile.amd64  Dockerfile.arm64  README.md  run.sh
docker/mosquitto/config/: config.all.json  config.json
docker/mosquitto/templates/: mosquitto.mustache
docker/pipeline/: Dockerfile.amd64  Dockerfile.arm64  README.md  dapr_pubsub.yaml  index.js
docker/pipeline/config/: config.json
docker/platform/: Dockerfile-slim.amd64  Dockerfile-slim.arm64  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.slim.amd64  Dockerfile.slim.arm64  README.md  index.js  minify.js
docker/platform/config/: config.json  types.json
docker/platform/config-slim/: config.json
docker/vss2iotea/: Dockerfile.amd64  Dockerfile.arm64  README.md  index.js
docs/: README.md
docs/topics/: iotea-communication.md  iotea-components.md  iotea-feature-engineering.md  iotea-integration-test-framework.md  iotea-internals.md  iotea-protocol-adapter.md  iotea-protocol-gateway.md  iotea-talents.md  iotea-types.md  iotea-writing-a-talent-with-just-mqtt.md  machine-learning.md
resources/: discovery.schema.json  feature.schema.json  fullFeature.schema.json  fullIndexedFeature.schema.json  rules.schema.json  types.schema.json
resources/swagger/: error.yml  feature.yml  instance.yml  instanceFeature.yml  instances.yml  type.yml  types.yml
src/: module.js
src/core/: api.js  channels.js  configManager.js  constants.js  encoding.js  ingestion.js  instance.js  instanceApi.js  instanceApi.swagger.options.json  instanceManager.js  logo.js  metadataApi.js  metadataApi.swagger.options.json  metadataManager.js  platformEvents.js  protocolGateway.js  routing.js  rules.js  rules.loader.js  rules.nelson.js  rules.tseries.js  rulesManager.js  swaggerApi.js  talent.func.js  talent.js  talent.mr.js  talent.test.js  talentConfigManager.js  uomManager.js
src/sdk/cpp/: .clang-format  CMakeLists.txt  README.md
src/sdk/cpp/adapters/: CMakeLists.txt
src/sdk/cpp/adapters/mqtt/: CMakeLists.txt
src/sdk/cpp/adapters/mqtt/include/: mqtt_adapter.hpp
src/sdk/cpp/adapters/mqtt/src/: mqtt_adapter.cpp
src/sdk/cpp/cmake/: FindPahoMqttC.cmake
src/sdk/cpp/examples/: CMakeLists.txt
src/sdk/cpp/examples/basic/: CMakeLists.txt  basic.cpp  pgconfig.json
src/sdk/cpp/examples/callback_mode/: CMakeLists.txt  callback_mode.cpp
src/sdk/cpp/examples/echo/: CMakeLists.txt  README.md  echo_consumer.cpp  echo_observer.cpp  echo_provider.cpp  events.txt
src/sdk/cpp/examples/event_consumer/: CMakeLists.txt  event_consumer.cpp
src/sdk/cpp/examples/function_provider/: CMakeLists.txt  function_provider.cpp
src/sdk/cpp/examples/functions/: CMakeLists.txt  functions.cpp
src/sdk/cpp/examples/subclass_mode/: CMakeLists.txt  subclass_mode.cpp
src/sdk/cpp/integration_tests/: CMakeLists.txt
src/sdk/cpp/integration_tests/include/: integrationtest.hpp  testsetrunner.hpp
src/sdk/cpp/integration_tests/src/: integrationtest.cpp  testsetrunner.cpp
src/sdk/cpp/lib/: CMakeLists.txt
src/sdk/cpp/lib/include/: call.hpp  client.hpp  common.hpp  context.hpp  event.hpp  interface.hpp  iotea.hpp  jsonquery.hpp  logging.hpp  mqtt_client.hpp  protocol_gateway.hpp  schema.hpp  talent.hpp  talent_test.hpp  testset_talent.hpp  testsuite_talent.hpp  util.hpp
src/sdk/cpp/lib/mocks/: CMakeLists.txt
src/sdk/cpp/lib/mocks/include/: iotea_mocks.h
src/sdk/cpp/lib/src/: call.cpp  client.cpp  context.cpp  event.cpp  iotea.cpp  jsonquery.cpp  logging.cpp  mqtt_client.cpp  protocol_gateway.cpp  schema.cpp  talent.cpp  talent_test.cpp  testset_talent.cpp  testsuite_talent.cpp  util.cpp
src/sdk/cpp/lib/tests/: test_call.cpp  test_client.cpp  test_context.cpp  test_event.cpp  test_iotea.cpp  test_jsonquery.cpp  test_protocol_gateway.cpp  test_schema.cpp  test_talent.cpp  test_talent_test.cpp  test_testset_talent.cpp  test_testsuite_talent.cpp  test_util.cpp
src/tools/: terminal.js
test/: jasmine.json
test/helpers/: null.logger.js  protocolGateway.forcewait.js
test/integration-tests/: conventions.md
test/integration-tests/testset-rpc/cpp/: CMakeLists.txt  function_provider.cpp  testset_rpc.cpp
test/integration-tests/testset_sdk/cpp/: CMakeLists.txt  function_provider.cpp  testset_sdk.cpp
test/resources/: equals.input.json  instanceManager.mm.types.json  jsonModel.input.json  metadataManager.types.json  protocolGateway.config.json  rules.types.tseries.json  talentIO.event.json
(+361 files in other folders)
